gccida/c2/dwarf2out_frame_debug_expr
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/dwarf2out.c:1753:4: error: expected ';' after expression
rtx v11; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/dwarf2out.c:1753:5: error: use of undeclared identifier 'v11'
rtx v11; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/dwarf2out.c:1801:1: error: use of undeclared identifier 'v11'
v11 = ( rtx)expr[1]; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/dwarf2out.c:1805:17: error: use of undeclared identifier 'v11'
if ( *( _WORD *)v11 != 61 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/dwarf2out.c:1807:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v15.rtwint = ( __int64)rtx->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/dwarf2out.c:1818:6: error: use of undeclared identifier 'cfa_temp_0'; did you mean 'cfa_temp'?
if ( cfa_temp_0 != v35 ) 
     ^~~~~~~~~~
     cfa_temp
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/dwarf2out.c:1127:24: note: 'cfa_temp' declared here
static dw_cfa_location cfa_temp;
                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/dwarf2out.c:1818:17: error: invalid operands to binary expression ('dw_cfa_location' (aka 'struct cfa_loc') and 'long long')
if ( cfa_temp_0 != v35 ) 
     ~~~~~~~~~~ ^  ~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/dwarf2out.c:1839:6: error: use of undeclared identifier 'cfa_temp_0'; did you mean 'cfa_temp'?
if ( cfa_temp_0 != v20 ) 
     ^~~~~~~~~~
     cfa_temp
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/dwarf2out.c:1127:24: note: 'cfa_temp' declared here
static dw_cfa_location cfa_temp;
                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/dwarf2out.c:1839:17: error: invalid operands to binary expression ('dw_cfa_location' (aka 'struct cfa_loc') and 'long long')
if ( cfa_temp_0 != v20 ) 
     ~~~~~~~~~~ ^  ~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/dwarf2out.c:1845:8: error: use of undeclared identifier 'v11'
if ( ( v11->fld[0].rtint & 0xFFFFFFFE) == 6 || cfa.reg != v11->fld[0].rtint ) 
       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/dwarf2out.c:1845:59: error: use of undeclared identifier 'v11'
if ( ( v11->fld[0].rtint & 0xFFFFFFFE) == 6 || cfa.reg != v11->fld[0].rtint ) 
                                                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/dwarf2out.c:1868:1: error: use of undeclared identifier 'v11'
v11 = global_rtl[2]; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/dwarf2out.c:1872:12: error: use of undeclared identifier 'v11'
v47->reg = v11; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/dwarf2out.c:1888:6: error: use of undeclared identifier 'cfa_temp_0'; did you mean 'cfa_temp'?
if ( cfa_temp_0 != *( _DWORD *)( *( _QWORD *)( v15.rtwint + 8) + 8LL) ) 
     ^~~~~~~~~~
     cfa_temp
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/dwarf2out.c:1127:24: note: 'cfa_temp' declared here
static dw_cfa_location cfa_temp;
                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/dwarf2out.c:1888:17: error: invalid operands to binary expression ('dw_cfa_location' (aka 'struct cfa_loc') and 'uint32' (aka 'unsigned int'))
if ( cfa_temp_0 != *( _DWORD *)( *( _QWORD *)( v15.rtwint + 8) + 8LL) ) 
     ~~~~~~~~~~ ^  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/dwarf2out.c:1913:38: error: use of undeclared identifier 'v11'
v13 = ( unsigned __int16)*( _DWORD *)v11; 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/dwarf2out.c:1914:41: error: use of undeclared identifier 'v11'
switch ( ( unsigned __int16)*( _DWORD *)v11 ) 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/dwarf2out.c:1917:1: error: use of undeclared identifier 'cfa_temp_0'; did you mean 'cfa_temp'?
cfa_temp_0 = rtx->fld[0].rtuint; 
^~~~~~~~~~
cfa_temp
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/dwarf2out.c:1127:24: note: 'cfa_temp' declared here
static dw_cfa_location cfa_temp;
                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/dwarf2out.c:1917:12: error: assigning to 'dw_cfa_location' (aka 'struct cfa_loc') from incompatible type 'unsigned int'
cfa_temp_0 = rtx->fld[0].rtuint; 
           ^ ~~~~~~~~~~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug_expr/src/obj/dwarf2out.o] Error 1
